# loop_limitation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py  usage.py
src/: loop.cpp
src/loopEvaluation/: LoopData.cpp  LoopData.h  eigenStructure.cpp  eigenStructure.h  limitationSurfaceComputation.cpp  limitationSurfaceComputation.h  pointCollect.cpp  pointCollect.h  pointEvaluate.cpp  pointEvaluate.h
